--- a/styles/c7_main.css
+++ b/styles/c7_main.css
@@ -264,3 +264,11 @@ footer p {
 		display: block;
 	}
 }
+
+.cookie {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 20px;
+	font-size: 12px;
+}
